# win32-edit-demo

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  readme.md
res/: version.h.in
src/: main.cpp  main.hpp  main.manifest  main.rc  resource.h  resource.rc
